--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
 = A LaTeX Project example including a GitHub Action for building and uploading the created PDF file
 
-A simple https://www.latex-project.org/[LaTeX] project including https://github.com/anbo-de/LaTeX-GitHub-Action-example/blob/main/images/icebear.png[one image], https://github.com/anbo-de/LaTeX-GitHub-Action-example/blob/main/bib.bib[one bibliography item], and a https://github.com/anbo-de/LaTeX-GitHub-Action-example/blob/main/.github/workflows/build_latex_and_upload_pdf_file.yml[GitHub action to build the LaTeX project and finally upload the created PDF file] as an https://github.com/anbo-de/LaTeX-GitHub-Action-example/actions/runs/7674671844[artifact].
+A simple https://www.latex-project.org/[LaTeX] project including https://github.com/anbo-de/LaTeX-GitHub-Action-example/blob/main/images/icebear.png[one image], https://github.com/anbo-de/LaTeX-GitHub-Action-example/blob/main/bib.bib[one bibliography item], and a https://github.com/anbo-de/LaTeX-GitHub-Action-example/blob/main/.github/workflows/build_latex_and_upload_pdf_file.yml[GitHub action to build the LaTeX project and finally upload the created PDF file] as an https://github.com/anbo-de/LaTeX-GitHub-Action-example/actions/runs/7674671844[artifact]. Additionally, the created PDF file is stored as a https://github.com/anbo-de/LaTeX-GitHub-Action-example/releases/tag/latest[release].
